# stellar-zklogin

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  QUICK_START.md  README.md  SECURITY.md
circuits/identity-attestation/: README.md  package-lock.json  package.json
circuits/identity-attestation/keys/: verification_key.json  verification_key_soroban.json
circuits/identity-attestation/scripts/: compile.sh  export-vk-to-soroban.js  trusted-setup.sh
circuits/identity-attestation/src/: identity_attestation.circom
circuits/identity-attestation/test/: generate-proof.js  verify-proof.js
contracts/bn254-basics/: Cargo.toml
contracts/bn254-basics/src/: lib.rs
contracts/commitment-scheme/: Cargo.toml
contracts/commitment-scheme/src/: lib.rs
contracts/groth16-verifier/: Cargo.toml
contracts/groth16-verifier/src/: lib.rs
contracts/groth16-verifier/test_snapshots/test/: test_security_double_init_blocked.1.json  (+3 more)
contracts/identity-auth/: Cargo.toml
contracts/identity-auth/src/: lib.rs
contracts/merkle-tree/: Cargo.toml
contracts/merkle-tree/src/: lib.rs
contracts/poseidon-hash/: Cargo.toml
contracts/poseidon-hash/src/: lib.rs
contracts/zk-key-escrow/: Cargo.toml
contracts/zk-key-escrow/src/: lib.rs
contracts/zk-wallet/: Cargo.toml
contracts/zk-wallet/src/: lib.rs
docs/: ARCHITECTURE.md  DESIGN_RATIONALE.md  SECURITY_MODEL.md  TRUST_EVOLUTION.md
examples/demo/: README.md  build.js
examples/demo/public/: style.css
examples/demo/src/: index.ts
scripts/: build-all.sh  deploy-mainnet.sh  deploy-testnet.sh  test-before-deploy.sh
(+34 files in other folders)
